added utils interface for joinedEntity, refactored emailUtils